Add Avatar Menu
* Add avatar dropdown menu to header
* Move avatar circle to its own component
* Change typography to only bold flat and stroke buttons

--- a/alcs-frontend/src/app/features/board/card-detail-dialog/card-detail-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/card-detail-dialog/card-detail-dialog.component.html
@@ -102,8 +102,7 @@
       <p class="card-paused-days">{{ application.pausedDays }}</p>
     </div>
     <div class="flex-child small">
-      <mat-label></mat-label>
-      <button class="card-state-btn pull-right" (click)="onToggleActive()">
+      <button mat-stroked-button class="card-state-btn pull-right" (click)="onToggleActive()">
         {{ application.paused ? 'Activate' : 'Pause' }}
       </button>
     </div>
