Add button styling
* Apply button styling in most places
* Add scrollbar when card has lots of comments

--- a/alcs-frontend/src/app/features/application/review/decision-meeting-dialog/decision-meeting-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/review/decision-meeting-dialog/decision-meeting-dialog.component.html
@@ -13,8 +13,8 @@
   </mat-dialog-content>
   <mat-dialog-actions align="end">
     <div>
-      <button mat-button mat-dialog-close>Close</button>
-      <button mat-button type="submit" [disabled]="!meetingForm.form.valid">Save</button>
+      <button style="margin-right: 24px !important;" mat-stroked-button color="primary" mat-dialog-close>Close</button>
+      <button mat-flat-button color="primary" type="submit" [disabled]="!meetingForm.form.valid">Save</button>
     </div>
   </mat-dialog-actions>
 </form>
