--- a/alcs-frontend/src/app/shared/confirmation-dialog/confirmation-dialog.component.html
+++ b/alcs-frontend/src/app/shared/confirmation-dialog/confirmation-dialog.component.html
@@ -2,6 +2,6 @@
   <p>{{ data.body }}</p>
 </div>
 <div mat-dialog-actions>
-  <button mat-flat-button [mat-dialog-close]="false">Cancel</button>
-  <button mat-flat-button [mat-dialog-close]="true">Yes</button>
+  <button style="margin-right: 24px !important;" mat-stroked-button color="primary" [mat-dialog-close]="false">Cancel</button>
+  <button mat-flat-button color="primary" [mat-dialog-close]="true">Yes</button>
 </div>
