--- a/alcs-frontend/src/app/shared/mention-textarea/mention-textarea.component.html
+++ b/alcs-frontend/src/app/shared/mention-textarea/mention-textarea.component.html
@@ -14,8 +14,8 @@
     ></textarea>
   </mat-form-field>
   <div class="edit-buttons">
-    <button (click)="onCancel()">Cancel</button>
-    <button (click)="onSave()">Save</button>
+    <button mat-stroked-button color="primary" (click)="onCancel()">Cancel</button>
+    <button mat-flat-button color="primary" (click)="onSave()">Save</button>
   </div>
 </div>
 
