--- a/alcs-frontend/src/styles.scss
+++ b/alcs-frontend/src/styles.scss
@@ -11,6 +11,7 @@
 // ng-select
 @import '~@ng-select/ng-select/themes/material.theme.css';
 @import 'styles/ngselect.scss';
+@import 'styles/buttons.scss';
 
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
