--- a/alcs-frontend/src/styles/colors.scss
+++ b/alcs-frontend/src/styles/colors.scss
@@ -1,10 +1,14 @@
 $primary-color: #065a2f;
-$primary-color-dark: #002F17;
-$primary-color-light: #94C6AC;
+$primary-color-dark: #002f17;
+$primary-color-light: #94c6ac;
 
 $secondary-color: #fcba19;
+$secondary-color-dark: #c08106;
+$secondary-color-light: #fee9b5;
 
 $accent-color: #003366;
+$accent-color-dark: #002447;
+$accent-color-light: #a7c7e8;
 
 $black: #313132;
 $white: #ffffff;
@@ -20,4 +24,4 @@ $warning-color: #cc8b18;
 $dark-contrast-text: #000000;
 $light-contrast-text: $white;
 $favorite-star: #ffd700;
-$pending-star:#d3d3d3;
+$pending-star: #d3d3d3;
