Code review feedback

--- a/alcs-frontend/src/app/features/application/review/decision-meeting-dialog/decision-meeting-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/review/decision-meeting-dialog/decision-meeting-dialog.component.html
@@ -12,8 +12,8 @@
     </mat-form-field>
   </mat-dialog-content>
   <mat-dialog-actions align="end">
-    <div>
-      <button style="margin-right: 24px !important;" mat-stroked-button color="primary" mat-dialog-close>Close</button>
+    <div class="button-container">
+      <button mat-stroked-button color="primary" mat-dialog-close>Close</button>
       <button mat-flat-button color="primary" type="submit" [disabled]="!meetingForm.form.valid">Save</button>
     </div>
   </mat-dialog-actions>
