--- a/alcs-frontend/src/app/shared/mention-textarea/mention-textarea.component.html
+++ b/alcs-frontend/src/app/shared/mention-textarea/mention-textarea.component.html
@@ -13,7 +13,7 @@
       (itemSelected)="onMentionUserSelected($event)"
     ></textarea>
   </mat-form-field>
-  <div class="edit-buttons">
+  <div class="button-container">
     <button mat-stroked-button color="primary" (click)="onCancel()">Cancel</button>
     <button mat-flat-button color="primary" (click)="onSave()">Save</button>
   </div>
