--- a/alcs-frontend/src/app/features/board/create-card-detail-dialog/create-card-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/create-card-detail-dialog/create-card-dialog.component.html
@@ -85,7 +85,7 @@
   </mat-dialog-content>
   <mat-dialog-actions align="end">
     <div>
-      <button style="margin-right: 24px !important;" mat-stroked-button color="primary" [mat-dialog-close]="false">Cancel</button>
+      <button class="button-container" mat-stroked-button color="primary" [mat-dialog-close]="false">Cancel</button>
       <button mat-flat-button color="primary" type="submit" [disabled]="!createForm.valid">Save</button>
     </div>
   </mat-dialog-actions>
