--- a/alcs-frontend/src/app/shared/confirmation-dialog/confirmation-dialog.component.html
+++ b/alcs-frontend/src/app/shared/confirmation-dialog/confirmation-dialog.component.html
@@ -1,7 +1,7 @@
 <div mat-dialog-content>
   <p>{{ data.body }}</p>
 </div>
-<div mat-dialog-actions>
-  <button style="margin-right: 24px !important;" mat-stroked-button color="primary" [mat-dialog-close]="false">Cancel</button>
+<div class="button-container" mat-dialog-actions>
+  <button mat-stroked-button color="primary" [mat-dialog-close]="false">Cancel</button>
   <button mat-flat-button color="primary" [mat-dialog-close]="true">Yes</button>
 </div>
