--- a/alcs-frontend/src/app/shared/card/card.component.html
+++ b/alcs-frontend/src/app/shared/card/card.component.html
@@ -18,7 +18,7 @@
     </div>
     <div class="lower-card">
       <div class="active-days center">
-        <mat-icon title="Active Days">calendar_today</mat-icon>
+        <mat-icon title="Active Days">calendar_month</mat-icon>
         <span class="center">{{ cardData.activeDays }}</span>
       </div>
       <app-avatar-circle *ngIf="cardData.assigneeInitials" [initials]="cardData.assigneeInitials"></app-avatar-circle>
