--- a/alcs-frontend/src/app/shared/header/header.component.html
+++ b/alcs-frontend/src/app/shared/header/header.component.html
@@ -1,4 +1,4 @@
-<header style="border-bottom: 1px solid">
+<header class="header">
   <div class="flex-grid">
     <mat-toolbar>
       <div class="col">
