--- a/alcs-frontend/src/styles/colors.scss
+++ b/alcs-frontend/src/styles/colors.scss
@@ -13,6 +13,7 @@ $accent-color-light: #a7c7e8;
 $black: #313132;
 $white: #ffffff;
 $grey: #929292;
+$dark-grey: #565656;
 $link-color: #1c3f94;
 
 $bg-color: #f5f7e7;
