--- a/alcs-frontend/src/app/features/application/application.component.html
+++ b/alcs-frontend/src/app/features/application/application.component.html
@@ -1,21 +1,63 @@
 <div *ngIf="application" class="layout">
-  <div>
-    <div class="nav">
-      <div *ngFor="let route of childRoutes" class="section">
-        <div
-          [routerLink]="route.path ? route.path : './'"
-          routerLinkActive="active"
-          [routerLinkActiveOptions]="{ exact: true }"
+  <div class="application">
+    <div class="header">
+      <div class="heading">
+        <h5>{{ application?.fileNumber }} ({{ application?.applicant }})</h5>
+        <span
+          class="application-type"
+          [ngStyle]="{
+            backgroundColor: application.typeDetails.backgroundColor,
+            color: application.typeDetails.textColor
+          }"
+          >{{ application.typeDetails.label }}</span
         >
-          {{ route.menuTitle }}
+      </div>
+      <div class="sub-heading">
+        <div>
+          <div class="subheading2">Local Government:</div>
+          <div class="body1-text">Regional District of Okanagan-Similkameen</div>
+        </div>
+        <div>
+          <div class="subheading2">Public Status:</div>
+          <div class="body1-text">ALC Acknowledged - Complete</div>
+          <div class="subtext">Last updated: 2022-Sep-05</div>
+        </div>
+        <div>
+          <div class="subheading2">Business Days:</div>
+          <div class="body1-text left">
+            <span *ngIf="!application.paused"><span class="dot"></span>Active</span>
+            <span *ngIf="application.paused"><span class="dot paused"></span>Paused</span>
+            <mat-icon class="calendar">calendar_month</mat-icon>
+            {{ application.activeDays }}
+          </div>
+          <div class="subtext">Last updated: 2022-Sep-05</div>
+        </div>
+      </div>
+      <div>
+        <div class="subheading2">Proposal Summary:</div>
+        <div class="body1-text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint
         </div>
       </div>
     </div>
-  </div>
-  <div class="application">
-    <h2>{{ application?.fileNumber }} ({{ application?.applicant }})</h2>
-    <div class="child-content">
-      <router-outlet></router-outlet>
+    <div class="content">
+      <div class="nav">
+        <div *ngFor="let route of childRoutes" class="section">
+          <div
+            [routerLink]="route.path ? route.path : './'"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }"
+          >
+            {{ route.menuTitle }}
+          </div>
+        </div>
+      </div>
+      <div class="child-content">
+        <router-outlet></router-outlet>
+      </div>
     </div>
   </div>
 </div>
