--- a/alcs-frontend/src/app/features/application/application.component.scss
+++ b/alcs-frontend/src/app/features/application/application.component.scss
@@ -4,20 +4,92 @@
   display: flex;
   flex-direction: row;
   height: 100%;
+  width: 100%;
+  justify-content: center;
 }
 
 .application {
-  margin: 12px;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.application-type {
+  margin-left: 16px;
+  border-radius: 10px;
+  padding: 4px 12px;
+  font-size: 11px;
+  letter-spacing: 0.01em;
+  font-weight: 700;
+}
+
+.header {
+  padding: 16px 80px;
+  border-bottom: 1px solid #000;
+
+  .heading {
+    display: flex;
+    align-items: center;
+    margin-bottom: 16px;
+  }
+
+  .sub-heading {
+    margin-top: 16px;
+    margin-bottom: 8px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .subheading2 {
+    margin-bottom: 6px !important;
+  }
+
+  .subtext {
+    font-size: 11px;
+    color: $dark-grey;
+    letter-spacing: 0.01em;
+  }
+}
+
+.dot {
+  height: 12px;
+  width: 12px;
+  margin-right: 8px;
+  background-color: $primary-color;
+  border-radius: 50%;
+  display: inline-block;
+  border: 2px solid #efefef;
+  box-shadow: 0px 0px 4px 2px rgba(6, 90, 47, 0.2);
+}
+
+.dot.paused {
+  background-color: $error-color;
+  box-shadow: 0 0 4px 2px rgba(220, 16, 23, 0.2);
+}
+
+.calendar {
+  margin-left: 24px;
+  margin-right: 6px;
+  height: 18px;
+  width: 18px;
+  font-size: 18px;
+}
+
+.content {
+  display: flex;
+  flex-grow: 1;
+  padding: 0 80px;
 }
 
 .child-content {
-  margin: 12px 0;
+  margin: 24px;
+  flex-grow: 1;
 }
 
 .nav {
   width: 250px;
   border-right: 1px solid;
+  border-left: 1px solid;
   height: 100%;
 }
 
