--- a/alcs-frontend/src/app/features/home/home.component.html
+++ b/alcs-frontend/src/app/features/home/home.component.html
@@ -1,6 +1,8 @@
-<div class="welcome-title">
-  <h1>Welcome {{ currentUser.name }} to ALCS</h1>
-</div>
-<div>
-  <app-assigned></app-assigned>
+<div class="layout">
+  <div class="welcome-title">
+    <h1>Welcome {{ currentUser.name }} to ALCS</h1>
+  </div>
+  <div>
+    <app-assigned></app-assigned>
+  </div>
 </div>
