--- a/alcs-frontend/src/app/shared/avatar-circle/avatar-circle.component.scss
+++ b/alcs-frontend/src/app/shared/avatar-circle/avatar-circle.component.scss
@@ -1,5 +1,8 @@
+@import '../../../styles/colors';
+
 .avatar-circle {
   border-radius: 50%;
   padding: 6px;
-  border: 1px solid #0a5a9c;
+  background-color: $accent-color-dark;
+  color: $white;
 }
