--- a/alcs-frontend/src/app/shared/drag-drop-board/drag-drop-board.component.scss
+++ b/alcs-frontend/src/app/shared/drag-drop-board/drag-drop-board.component.scss
@@ -1,8 +1,10 @@
 .container {
   display: flex;
   overflow: auto;
-  min-height: 70vh;
-  margin-top: 32px;
+  max-width: 100vw;
+  margin-bottom: 32px;
+  height: calc(100% - 32px);
+  padding: 32px 80px 0 80px;
 }
 
 .header-container {
@@ -25,6 +27,14 @@
   min-width: 304px;
   display: flex;
   flex-direction: column;
+}
+
+.column:first-child {
+  margin-left: 0;
+}
+
+.column:last-child {
+  margin-right: 0;
 }
 
 .card-container {
