--- a/alcs-frontend/src/app/shared/header/header.component.scss
+++ b/alcs-frontend/src/app/shared/header/header.component.scss
@@ -1,5 +1,15 @@
 @import '../../../styles/colors';
 
+.header {
+  padding: 0 80px;
+  border-bottom: 1px solid;
+  background-color: whitesmoke;
+}
+
+.mat-toolbar-row, .mat-toolbar-single-row {
+  padding: 0;
+}
+
 .menu-items-container {
   width: 100%;
   .menu-item:hover {
@@ -27,7 +37,7 @@ button.mat-menu-item:hover {
 .logo {
   display: inline-block;
   width: 100px;
-  padding: 10px 4px 4px 4px;
+  padding: 10px 4px 4px 0;
 
   img {
     width: 100%;
@@ -89,6 +99,7 @@ div.board-item {
 }
 
 .avatar-menu {
+  padding-right: 0px;
   display: flex;
   align-items: center;
 
