--- a/alcs-frontend/src/app/features/application/application.component.scss
+++ b/alcs-frontend/src/app/features/application/application.component.scss
@@ -59,12 +59,12 @@
   border-radius: 50%;
   display: inline-block;
   border: 2px solid #efefef;
-  box-shadow: 0px 0px 4px 2px rgba(6, 90, 47, 0.2);
+  box-shadow: 0px 0px 4px 2px rgba($primary-color, 0.3);
 }
 
 .dot.paused {
   background-color: $error-color;
-  box-shadow: 0 0 4px 2px rgba(220, 16, 23, 0.2);
+  box-shadow: 0 0 4px 2px rgba($error-color, 0.3);
 }
 
 .calendar {
