Small CSS Fixes
* Fix avatar circle not being round for certain letters
* Change notifications and header menus to open on the left side
* Make notification headers bold again

--- a/alcs-frontend/src/app/shared/avatar-circle/avatar-circle.component.scss
+++ b/alcs-frontend/src/app/shared/avatar-circle/avatar-circle.component.scss
@@ -2,7 +2,11 @@
 
 .avatar-circle {
   border-radius: 50%;
-  padding: 6px;
+  width: 32px;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: $accent-color-dark;
   color: $white;
 }
