--- a/alcs-frontend/src/app/shared/header/notifications/notifications.component.html
+++ b/alcs-frontend/src/app/shared/header/notifications/notifications.component.html
@@ -6,7 +6,7 @@
     >notifications</mat-icon
   >
 </button>
-<mat-menu #notificationMenu="matMenu">
+<mat-menu #notificationMenu="matMenu" xPosition="before">
   <div class="notifications-header">
     <div class="subheading2">Notifications</div>
     <div class="notifications-header-menu">
