--- a/alcs-frontend/src/app/features/application/review/review.component.html
+++ b/alcs-frontend/src/app/features/application/review/review.component.html
@@ -1,2 +1,7 @@
 <h3>Review</h3>
-<app-decision-meeting [fileNumber]="fileNumber"></app-decision-meeting>
+<section>
+  <app-decision-meeting [fileNumber]="fileNumber"></app-decision-meeting>
+</section>
+<section>
+  <app-decision-document [fileNumber]="fileNumber"></app-decision-document>
+</section>
