--- a/alcs-frontend/src/app/features/application/review/decision-meeting/decision-meeting.component.html
+++ b/alcs-frontend/src/app/features/application/review/decision-meeting/decision-meeting.component.html
@@ -11,14 +11,14 @@
 
 <br />
 
-<table mat-table [dataSource]="decisionMeetings" class="mat-elevation-z8 width-100">
+<table mat-table [dataSource]="decisionMeetings" class="mat-elevation-z4 width-100">
   <ng-container matColumnDef="date">
     <th mat-header-cell *matHeaderCellDef>Date</th>
-    <td mat-cell *matCellDef="let element">{{ element.date | date: 'mediumDate' }}</td>
+    <td mat-cell *matCellDef="let element">{{ element.date | date: dateFormat }}</td>
   </ng-container>
 
   <ng-container matColumnDef="action">
-    <th mat-header-cell *matHeaderCellDef>User Action</th>
+    <th mat-header-cell *matHeaderCellDef>Action</th>
     <td mat-cell *matCellDef="let element">
       <button mat-icon-button class="action-btn" (click)="onEdit(element.uuid)">
         <mat-icon>edit</mat-icon>
