Generalize Document Uploads
* Refactor existing decision document component to general application document
* Use general component and setup new decision page with uploads
* Add decisionDate field to applications and add picker for it
* Add a base application/fileNumber path for each upload

--- a/alcs-frontend/src/app/features/application/application-document/application-document.component.html
+++ b/alcs-frontend/src/app/features/application/application-document/application-document.component.html
@@ -1,6 +1,6 @@
 <div class="table-header">
   <div>
-    <h4>Decision Documents</h4>
+    <h4>{{ title }}</h4>
   </div>
   <div>
     <input hidden type="file" #file (change)="uploadFile($event)" placeholder="Upload file" />
