--- a/alcs-frontend/src/app/features/application/review/review.component.html
+++ b/alcs-frontend/src/app/features/application/review/review.component.html
@@ -3,5 +3,5 @@
   <app-decision-meeting [fileNumber]="fileNumber"></app-decision-meeting>
 </section>
 <section>
-  <app-decision-document [fileNumber]="fileNumber"></app-decision-document>
+  <app-document [fileNumber]="fileNumber" documentType="reviewDocument" title="Review Package"></app-document>
 </section>
