--- a/alcs-frontend/src/app/shared/commenting/comments.component.html
+++ b/alcs-frontend/src/app/shared/commenting/comments.component.html
@@ -1,4 +1,5 @@
 <div class="comments">
+  <div class="subheading2 header">Comments ({{comments.length}})</div>
   <mat-form-field *ngIf="!isEditing" class="placeholder-input" appearance="fill" (click)="onEdit()">
     <input matInput placeholder="Add a comment..." />
   </mat-form-field>
