--- a/alcs-frontend/src/app/shared/mention-textarea/mention-textarea.component.html
+++ b/alcs-frontend/src/app/shared/mention-textarea/mention-textarea.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="container">
   <mat-form-field class="comment-input" appearance="fill">
     <mat-label [hidden]="!labelText">{{ labelText }}</mat-label>
     <textarea
