--- a/alcs-frontend/src/app/shared/commenting/comment.component.html
+++ b/alcs-frontend/src/app/shared/commenting/comment.component.html
@@ -1,11 +1,6 @@
 <div *ngIf="comment" class="comment">
-  <div class="header">
-    <div class="made-by">{{ comment.author }}</div>
-    <div class="created-at">
-      {{ commentDate }}
-    </div>
-  </div>
   <div class="body">
+    <div class="made-by badge">{{ comment.author }}</div>
     <div *ngIf="isEditing">
       <app-mention-textarea
         [comment]="comment"
@@ -14,14 +9,15 @@
         labelText="Edit comment"
       ></app-mention-textarea>
     </div>
-    <div *ngIf="!isEditing" class="content" [innerHtml]="highlightMentions(comment.body)"></div>
+    <div *ngIf="!isEditing" class="content body-small" [innerHtml]="highlightMentions(comment.body)"></div>
     <div class="footer" *ngIf="!isEditing">
-      <div>
-        <span class="edited" *ngIf="comment.edited">(edited) </span>
+      <div class="edited">
+        {{ commentDate }}
+        <span *ngIf="comment.edited">&nbsp;(edited)</span>
       </div>
       <div>
-        <button *ngIf="comment.isEditable" (click)="onDelete()" mat-button>delete</button>
-        <button *ngIf="comment.isEditable" (click)="onEdit()" mat-button>edit</button>
+        <button *ngIf="comment.isEditable" (click)="onDelete()" mat-button>Delete</button>
+        <button *ngIf="comment.isEditable" (click)="onEdit()" mat-button>Edit</button>
       </div>
     </div>
   </div>
