--- a/alcs-frontend/src/app/shared/header/header.component.scss
+++ b/alcs-frontend/src/app/shared/header/header.component.scss
@@ -36,7 +36,7 @@ button.mat-menu-item:hover {
 
 .logo {
   display: inline-block;
-  width: 100px;
+  height: 64px;
   padding: 10px 4px 4px 0;
 
   img {
