Add Subtasks and first subtask type
* Add subtask and subtask type entites
* Add new service, controller to handle these
* Add new component to frontend for rendering
* Clean up code by adding util time formatter for api to DRY up code

--- a/alcs-frontend/src/app/features/board/card-detail-dialog/card-detail-dialog.component.scss
+++ b/alcs-frontend/src/app/features/board/card-detail-dialog/card-detail-dialog.component.scss
@@ -117,6 +117,10 @@
   background-image: url("/assets/icons/priority_empty.svg");
 }
 
+.subtasks-wrapper {
+  margin-top: 36px;
+}
+
 .card-comments-wrapper {
   max-height: 350px;
   overflow-y: auto;
