--- a/alcs-frontend/src/app/features/board/card-detail-dialog/card-detail-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/card-detail-dialog/card-detail-dialog.component.html
@@ -128,6 +128,9 @@
       </ng-template>
     </ng-select>
   </div>
+  <div class="subtasks-wrapper">
+    <app-subtasks [fileNumber]="application.fileNumber"></app-subtasks>
+  </div>
   <div class="card-comments-wrapper">
     <app-comments [fileNumber]="application.fileNumber"></app-comments>
   </div>
