--- a/alcs-frontend/src/styles.scss
+++ b/alcs-frontend/src/styles.scss
@@ -176,6 +176,13 @@ body {
   }
 }
 
+.split {
+  display: flex;
+  align-content: center;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .center {
   display: flex;
   align-content: center;
