--- a/alcs-frontend/src/styles/ngselect.scss
+++ b/alcs-frontend/src/styles/ngselect.scss
@@ -3,7 +3,8 @@
 .ng-select.card-assignee .ng-select-container,
 .ng-select.card-type .ng-select-container,
 .ng-select.card-decision-maker .ng-select-container,
-.ng-select.card-region .ng-select-container{
+.ng-select.card-region .ng-select-container,
+.ng-select.subtask-assignee .ng-select-container {
   .ng-value-container {
     margin-top: 15px;
 
