--- a/alcs-frontend/src/app/shared/header/header.component.html
+++ b/alcs-frontend/src/app/shared/header/header.component.html
@@ -29,6 +29,7 @@
         </mat-menu>
       </div>
       <div *ngIf="currentUserProfile" class="col right">
+        <app-search-bar></app-search-bar>
         <app-notifications *ngIf="hasRoles"></app-notifications>
         <button
           [class.open]="menuTrigger.menuOpen"
