Code Review feedback
* Add input text to warning toast
* Rename placeholder to File Number to be more obvious of its limitations
* Bump One time file link to 60 seconds

--- a/alcs-frontend/src/app/shared/header/search-bar/search-bar.component.html
+++ b/alcs-frontend/src/app/shared/header/search-bar/search-bar.component.html
@@ -6,7 +6,7 @@
       (focus)="searchInput.select()"
       [(ngModel)]="searchText"
       matInput
-      placeholder="Search"
+      placeholder="File ID"
     />
     <mat-icon matPrefix>search</mat-icon>
   </mat-form-field>
