--- a/alcs-frontend/src/app/features/home/gis/gis-subtasks.component.html
+++ b/alcs-frontend/src/app/features/home/gis/gis-subtasks.component.html
@@ -25,7 +25,7 @@
         <td>
           <ng-select
             class="subtask-assignee"
-            [items]="$users | async"
+            [items]="gisUsers"
             bindLabel="name"
             bindValue="name"
             [ngModel]="subtask.assignee"
