GIS Subtask Fixes
* Replace null with isNull to only fetch incomplete subtasks
* Change alignment of row to better align dropdowns
* Add min-width to assignee to prevent it from getting squished on smaller screens

--- a/alcs-frontend/src/app/features/board/card-detail-dialog/card-detail-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/card-detail-dialog/card-detail-dialog.component.html
@@ -98,7 +98,7 @@
   </div>
 </div>
 <mat-dialog-content>
-  <div style="display: grid; grid-template-columns: 1fr 1fr; grid-column-gap: 24px">
+  <div class="select-container">
     <ng-select
       class="card-type"
       [items]="applicationStatuses"
