--- a/alcs-frontend/src/app/features/home/gis/gis-subtasks.component.html
+++ b/alcs-frontend/src/app/features/home/gis/gis-subtasks.component.html
@@ -22,7 +22,7 @@
         <td>{{ subtask.application.fileNumber }} ({{ subtask.application.applicant }})</td>
         <td>{{ subtask.application.activeDays }}</td>
         <td>{{ subtask.application.status }}</td>
-        <td>
+        <td class="assignee-column">
           <ng-select
             class="subtask-assignee"
             [items]="gisUsers"
